Add style to Rockets page and My Profil

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,111 @@
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
+.dflex {
+  display: flex;
+}
 
-  to {
-    transform: rotate(360deg);
-  }
+nav {
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px 20px;
+  border-bottom: 1px solid #545454;
+  margin-bottom: 45px;
+}
+
+a {
+  text-decoration: none !important;
+  color: #5151fe !important;
+}
+
+.navLogo {
+  align-items: center;
+  justify-content: start;
+  gap: 10px;
+}
+
+.navLogo img {
+  width: 70px;
+}
+
+nav ul {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  gap: 16px;
+}
+
+nav ul li {
+  list-style: none;
+}
+
+nav a.active {
+  text-decoration: underline !important;
+}
+
+.rocket_card {
+  gap: 16px;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.rocket_details {
+  width: 65%;
+  font-size: 14px;
+  padding: 20px 0;
+}
+
+.rocket_details h3 {
+  font-size: 20px;
+}
+
+.rocket_card img {
+  width: 220px;
+}
+
+.rocket_details .cancel_btn {
+  padding: 5px 15px;
+  background: white;
+  border: 1px solid #545454;
+  border-radius: 5px;
+  color: #545454;
+}
+
+.rocket_details .reserve_btn {
+  padding: 5px 15px;
+  background: #5151fe;
+  border: none;
+  border-radius: 5px;
+  color: white;
+}
+
+.reserve_badge {
+  font-size: 10px;
+  color: white;
+  background: #42a3b8;
+  margin-right: 5px;
+  padding: 2px 5px;
+  border-radius: 3px;
+}
+
+.my_profil {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: 20px;
+}
+
+.profil_Table {
+  width: 100% !important;
+}
+
+.side_card {
+  width: 40%;
+}
+
+.profil_Table tr {
+  border: 1px solid #545454;
+}
+
+.profil_Table td {
+  font-size: 14px;
+  padding: 10px 20px;
 }
