--- a/src/App.css
+++ b/src/App.css
@@ -158,7 +158,7 @@ nav a.active {
 }
 
 .td-join {
-  background-color: #fff;;
+  background-color: #fff;
   border: 1px solid #999;
   color: #555;
   font-size: 12px;
